plugins {
    id 'java'
}

group 'ch.szclsb'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
}

tasks.register('buildNative', Exec) {
    workingDir "${rootProject.projectDir}"
    doFirst {
        println "Compiling native dll"
    }
    commandLine 'cmd', '/c', 'build-native.bat'
    doLast {
        println "Finished building dll"
    }
}

compileJava {
    dependsOn buildNative
    options.compilerArgs += ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(24)
    }
}

compileTestJava {
    options.compilerArgs += ['--enable-preview', '--add-modules', 'jdk.incubator.vector']
}

test {
    jvmArgs('--add-modules', 'jdk.incubator.vector')
    useJUnitPlatform()
}
